--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-
 # Godot-specific ignores
 .import/
 export.cfg
 export_presets.cfg
+.godot/
 
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Custom
+logs/
+
+# Krita
+*.png~
+*.png-autosave.kra
+*-autosave.kra
+*.kra~
+
+# Miscellaneous
+*.tmp
